<resources>
    <string name="app_name">TipCalculator-McCarty2</string>
    <string name="calculate">Calculate</string>
    <string name="editText">Input Amount Here</string>
    <string name="people"># of People Here</string>
    <string name="defaultText">Default Text</string>
    <string name="percentTen">10%</string>
    <string name="percentFift">15%</string>
    <string name="percentTwent">20%</string>
    <string name="customTip">Custom Tip</string>
    <string name="customTipAmnt">Enter your custom tip amount</string>
    <string name="reset">Reset</string>
    <string name="peopleRegex">123456789</string>
    <string name="decimalRegex">123456789.</string>
    <string name="backButton">Back</string>
    <string name="tab2">Total Tab:</string>
    <string name="people2">Number of people:</string>
    <string name="tip2">Calculated Tip Total:</string>
    <string name="splitTotal">Split Total:</string>
    <string name="alignmentText">Alignment Text</string>
</resources>